added portfolio, reomved pricing, faq

--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
     <nav id="navbar" class="navbar">
       <ul>
         <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
+        <li><a class="nav-link scrollto" href="#features">Fonctionnalités</a></li>
         <li><a class="nav-link scrollto" href="#about">À Propos</a></li>
         <li><a class="nav-link scrollto" href="#services">Services</a></li>
-        <li><a class="nav-link scrollto" href="#features">Fonctionnalités</a></li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
 
+    <a href="https://app.si-simple.onl" class="btn btn-primary">Essayer Maintenant</a>
   </div>
 </header><!-- End Header -->
 
@@ -250,7 +251,7 @@
 </section><!-- End Services Section -->
 
 <!-- ======= Portfolio Section ======= -->
-<section id="portfolio" class="portfolio">
+<section id="portfolio" class="portfolio section-bg">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
@@ -273,34 +274,56 @@
     <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
       <!-- Security and Access Management -->
-      <div class="col-lg-4 col-md-6 portfolio-item filter-security">
-        <img src="assets/img/portfolio/security.jpg" class="img-fluid" alt="Sécurité et Gestion des Accès">
+      <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-security">
+        <img src="assets/img/portfolio/security.png" class="img-fluid" alt="Sécurité et Gestion des Accès">
         <div class="portfolio-info">
           <h4>Sécurité et Gestion des Accès</h4>
           <p>Assurez la confidentialité et la sécurité</p>
-          <a href="assets/img/portfolio/security.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Sécurité et Gestion des Accès"><i class="bx bx-plus"></i></a>
+          <a href="assets/img/portfolio/security.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Sécurité et Gestion des Accès"><i class="bx bx-plus"></i></a>
           <a href="security-details.html" class="details-link" title="Plus de Détails"><i class="bx bx-link"></i></a>
         </div>
-      </div>
+      </div> -->
 
-      <!-- Contact and File Management -->
+      <!-- Gestion des Demandes -->
       <div class="col-lg-4 col-md-6 portfolio-item filter-management">
-        <img src="assets/img/portfolio/management.jpg" class="img-fluid" alt="Gestion des Contacts et des Dossiers">
+        <img src="assets/img/portfolio/management.png" class="img-fluid" alt="Gestion des Demandes">
         <div class="portfolio-info">
-          <h4>Gestion des Contacts et des Dossiers</h4>
+          <h4>Gestion des Demandes</h4>
           <p>Centralisez et gérez efficacement</p>
-          <a href="assets/img/portfolio/management.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Gestion des Contacts et des Dossiers"><i class="bx bx-plus"></i></a>
+          <a href="assets/img/portfolio/management.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Gestion des Demandes"><i class="bx bx-plus"></i></a>
           <a href="management-details.html" class="details-link" title="Plus de Détails"><i class="bx bx-link"></i></a>
         </div>
       </div>
 
+            <!-- Contact and File Management -->
+            <div class="col-lg-4 col-md-6 portfolio-item filter-management">
+              <img src="assets/img/portfolio/contact.png" class="img-fluid" alt="Gestion des contacts">
+              <div class="portfolio-info">
+                <h4>Gestion des contacts</h4>
+                <p>Centralisez et gérez efficacement</p>
+                <a href="assets/img/portfolio/contact.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Gestion des contacts"><i class="bx bx-plus"></i></a>
+                <a href="management-details.html" class="details-link" title="Plus de Détails"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+
+            <!-- Gestion des rendez-vous -->
+            <div class="col-lg-4 col-md-6 portfolio-item filter-management">
+              <img src="assets/img/portfolio/calendrier.png" class="img-fluid" alt="Gestion des rendez-vous">
+              <div class="portfolio-info">
+                <h4>Gestion des rendez-vous</h4>
+                <p>Planifier votre calendrier proactivement</p>
+                <a href="assets/img/portfolio/calendrier.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Gestion des rendez-vous"><i class="bx bx-plus"></i></a>
+                <a href="calendrier-details.html" class="details-link" title="Plus de Détails"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+
       <!-- AI and Decision Aid -->
       <div class="col-lg-4 col-md-6 portfolio-item filter-ai">
-        <img src="assets/img/portfolio/ai.jpg" class="img-fluid" alt="Aide à la Décision et IA">
+        <img src="assets/img/portfolio/ai.png" class="img-fluid" alt="Aide à la Décision et IA">
         <div class="portfolio-info">
           <h4>Aide à la Décision et IA</h4>
           <p>Prenez des décisions éclairées</p>
-          <a href="assets/img/portfolio/ai.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Aide à la Décision et IA"><i class="bx bx-plus"></i></a>
+          <a href="assets/img/portfolio/ai.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Aide à la Décision et IA"><i class="bx bx-plus"></i></a>
           <a href="ai-details.html" class="details-link" title="Plus de Détails"><i class="bx bx-link"></i></a>
         </div>
       </div>
@@ -313,7 +336,7 @@
 </section><!-- End Portfolio Section -->
 
 <!-- ======= Pricing Section ======= -->
-<section id="pricing" class="pricing">
+<!-- <section id="pricing" class="pricing">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
@@ -396,10 +419,11 @@
     </div>
 
   </div>
-</section><!-- End Pricing Section -->
+</section> -->
+<!-- End Pricing Section -->
 
 <!-- ======= Frequently Asked Questions Section ======= -->
-<section id="faq" class="faq section-bg">
+<!-- <section id="faq" class="faq section-bg">
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
@@ -471,7 +495,8 @@
     </div>
 
   </div>
-</section><!-- End Frequently Asked Questions Section -->
+</section> -->
+<!-- End Frequently Asked Questions Section -->
 
 <!-- ======= Contact Section ======= -->
 <section id="contact" class="contact">
