--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     window.onload = function () {
       var chatDiv = document.createElement('div');
       document.body.appendChild(chatDiv);
-      chatDiv.outerHTML = '<iframe src="https://next-langchain-app-seven.vercel.app" style="border:none; position:fixed; bottom:0; right:0; width:300px; height:400px;"></iframe>';
+      chatDiv.outerHTML = '<iframe src="https://next-langchain-app-seven.vercel.app" style="z-index:9999; border:none; position:fixed; bottom:0; right:0; width:300px; height:400px;"></iframe>';
     };
   </script>
 
