--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">En savoir plus</a>
         <!-- Vous pouvez remplacer le lien YouTube par une vidéo de présentation de Si Simple -->
-        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i
+        <a href="assets/sisimple.mp4" class="glightbox btn-watch-video"><i
             class="bi bi-play-circle"></i><span>Voir la vidéo</span></a>
       </div>
     </div>
@@ -137,6 +137,8 @@
               <div class="icon"><i class="bx bx-brain"></i></div>
               <h4 class="title"><a href="#ia">Aide à la Décision et Intelligence Artificielle</a></h4>
               <p class="description">Exploitez l'intelligence artificielle pour des prises de décisions éclairées.</p>
+              <a href="assets/intellinotes.mp4" class="glightbox btn-watch-video"><i
+                class="bi bi-play-circle"></i><span>Voir la vidéo</span></a>
             </div>
           </div>
 
